# text-analysis-toolkit

./: README.md  pyproject.toml  requirements.txt
samples/: mixed_article.txt  negative_review.txt  positive_review.txt
text_analysis_toolkit/: __init__.py  analyzer.py  cli.py  frequency.py  reporter.py  sentiment.py  tokenizer.py
text_analysis_toolkit/tests/: test_analyzer.py  test_frequency.py  test_reporter.py  test_sentiment.py  test_tokenizer.py
webapp/: main.py  run.py
webapp/static/css/: style.css
webapp/static/js/: main.js
webapp/templates/: about.html  base.html  demo.html  documentation.html  index.html
